final commit with routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,5 @@
 <app-global-error></app-global-error>
-<div class="max-w-2xl container mx-auto pt-5">
-  <h1 class="text-2xl text-blue-700 font-bold text-center my-4">{{ title | titlecase }}</h1>
-  <input class="mb-2 border py-2 px-4 w-full" placeholder="Filter product..." [(ngModel)]="textSearch">
-
-  <p *ngIf="loading" class="text-center text-lg">Loading...</p>
-  <div *ngIf="productsService.products">
-    <app-product *ngFor="let product of productsService.products | filterProducts:textSearch; let i = index" [product]="product"></app-product>
-  </div>
-  <app-modal *ngIf="modalService.isVisible$ | async " title="Create product">
-    <app-create-product/>
-  </app-modal>
-  <button class="rounded-full px-4 py-2 bg-blue-800 text-white fixed bottom-6 right-6" (click)="modalService.open()">+</button>
+<app-navigate></app-navigate>
+<div class="max-w-2xl container mx-auto pt-5 mt-[3rem]">
+  <router-outlet></router-outlet>
 </div>
